Fix numeral spacing in tabular

--- a/src/views/LeadAdd/LeadFormItem/LeadTabular/styles.scss
+++ b/src/views/LeadAdd/LeadFormItem/LeadTabular/styles.scss
@@ -14,7 +14,6 @@
 
         .body {
             display: flex;
-            width: 480px;
             height: 480px;
         }
     }
